--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap');
+
+#root{
+    font-family: 'Space Grotesk', sans-serif;
+}
+/* 
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +45,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
