--- a/src/Pages/Home/Subjects/Subjects.css
+++ b/src/Pages/Home/Subjects/Subjects.css
@@ -1,40 +1,7 @@
-.card {
-    position: relative;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #ccc;
-    overflow: hidden;
-  }
-  
-  .card-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    transition: opacity 0.3s ease;
-  }
-  
-  .card:hover .card-content {
-    opacity: 100;
-  }
-  
-  .card-content::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('http://t0.gstatic.com/licensed-image?q=tbn:ANd9GcSG0nGaGYIIkLD5HyKsGh8TPBP_wRw6Ht0SZiZC1TZxj0c46KYCV7e0O-3geMcRVxsh2OJCuwvSSFXlJrtb64U');
+.sub_card:hover{
+  opacity: 80%;
+  background-image: url('http://t0.gstatic.com/licensed-image?q=tbn:ANd9GcSG0nGaGYIIkLD5HyKsGh8TPBP_wRw6Ht0SZiZC1TZxj0c46KYCV7e0O-3geMcRVxsh2OJCuwvSSFXlJrtb64U');
+}
     
-    background-size: cover;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .card:hover .card-content::before {
-    opacity: 100;
-  }
+ 
   
