--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,14 @@
 .footer_social_icon{
     @apply w-10 h-10 md:mx-0 mx-auto rounded-xl bg-slate-200 hover:bg-orange-500 hover:text-white text-[#0E8EF1] transition duration-200
 }
+
+/* Button */
+.btn-primary{ 
+    @apply font-medium md:mb-0 rounded py-2 px-5 uppercase text-white bg-gradient-to-r from-blue-500 to-fuchsia-600 
+  }
+  .btn-secondary{
+    @apply font-medium md:mb-0 rounded py-2 px-5 uppercase text-white bg-gradient-to-r from-blue-500 to-fuchsia-600 
+  }
+  .btn-outline{
+    @apply font-medium  md:mb-0 rounded px-4 py-1 text-fuchsia-500 border  border-fuchsia-500 hover:bg-gradient-to-r from-blue-400 to-fuchsia-400 hover:text-white 
+  }
