--- a/src/Pages/Home/Testimonial/Testimonial.css
+++ b/src/Pages/Home/Testimonial/Testimonial.css
@@ -1,6 +1,6 @@
-
 .swiper {
   width: 1140px;
+  /* width: 100%; */
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -14,12 +14,20 @@
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
   filter: blur(2px);
 }
-.swiper-slide-active{
+.swiper-slide-active {
   filter: blur(0px);
   background-color: #ebe5e5;
 }
 .swiper-slide-prev,
-.swiper-slide-next
-{
+.swiper-slide-next {
   background-image: none;
+}
+
+@media only screen and (max-width: 480px) and (min-width: 320px) {
+  .swiper {
+    width: 320px;
+  }
+  .swiper-slide {
+    width: 300px;
+  }
 }
