--- a/src/Pages/Home/Subjects/Subjects.css
+++ b/src/Pages/Home/Subjects/Subjects.css
@@ -37,4 +37,14 @@
   .card:hover .card-content::before {
     opacity: 100;
   }
+
+  .box{
+    width: 5rem;
+    height: 5rem;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   
