--- a/src/Pages/Home/DemoTest/demoTest.css
+++ b/src/Pages/Home/DemoTest/demoTest.css
@@ -30,5 +30,5 @@
     }
 /* quiz buttons styles */
 .btn_quiz{
-    @apply md:mb-4 md:py-2 md:px-4 text-white  md:ml-4 p-1 m-1  btn
+    @apply md:mb-4 md:py-2 md:px-4 text-white  md:ml-4 p-1 m-1  btn md:bottom-1
 }
