--- a/src/Shared/Nav/Nav.css
+++ b/src/Shared/Nav/Nav.css
@@ -2,6 +2,7 @@
     background: linear-gradient(45deg,rgb(17, 9, 83), rgb(54, 2, 102), rgb(4, 64, 114), rgb(73, 1, 114));
     background-size: 200% 200%;
     animation: color 22s ease-in-out infinite;
+    color: white;
 }
 @keyframes color{
     0%{
